Fix some layout issues

--- a/styles/style_main.css
+++ b/styles/style_main.css
@@ -46,6 +46,7 @@
 
 .full-page{
 	width: 100%;
+	background: #FBFBFB;
 
 	justify-content: center;
 	align-items: flex-start;
@@ -60,10 +61,9 @@
 	width: 100%;
 	height: 100%;
 	min-height: 500px;
-	background: #FBFBFB;
 	overflow: hidden;
 	max-width: 1024px;
-	margin: auto;
+	margin: auto auto 8vh auto;
 }
 
 .page >	.titleText {
@@ -82,10 +82,9 @@
 	width: 100%;
 	height: 100%;
 	min-height: 500px;
-	background: #FBFBFB;
 	overflow: hidden;
 	max-width: 1024px;
-	margin: auto;
+	margin: auto auto 8vh auto;
 
 	align-items: center;
 	display: flex;
@@ -282,19 +281,20 @@ span {
 .Account {
 	text-align: center;
 	align-items: center;
-	justify-content: space-between;
+	justify-content: space-evenly;
+	flex-direction: row;
 	display: inline-flex;
-	gap: 10px;
+	gap: 1vw;
 	margin: 15px;
 	width:100%;
 	max-width: 340px;
 }
 .Account > .Line {
-	min-width: 120px;
+	min-width: 100px;
 	flex-direction: row;
 	justify-content: flex-end;
 	display: inline-flex;
-	gap: 20px;
+	gap: 1vw;
 
 	.Text {
 		white-space: nowrap;
@@ -325,8 +325,8 @@ button.Button {
 		line-height: 1.35rlh;
 
 		white-space: nowrap;
-		margin-left: 15px;
-		margin-right: 15px;
+		margin-left: 0.5rem;
+		margin-right: 0.5rem;
 	}
 	width: fit-content;
 	position: relative;
@@ -353,5 +353,12 @@ button.Button {
 	background: #101D41;
 	.Text {
 		color: #FCFCFC;
+	}
+}
+
+/* Account button layout change */
+@media only screen and (max-width: 400px){
+	.Account {
+		flex-direction: column;
 	}
 }
