--- a/styles/style_sub.css
+++ b/styles/style_sub.css
@@ -25,7 +25,7 @@ html {
 		align-items: center;
 		gap: 1rem;
 	}
-	background: linear-gradient(#D9D9D900 0%, #D9D9D900 50%, #D9D9D9FF 70%, #FBFBFBFF 100%), url("../resources/image/Cover_0.jpg") no-repeat center center;
+	background: linear-gradient(#FBFBFB00 0%, #FBFBFB00 50%, #FBFBFBFF 70%, #FBFBFBFF 100%), url("../resources/image/Cover_0.jpg") no-repeat center center;
 	background-size: cover;
 	background-position: 50% 20%;
 	width:100%;
@@ -48,10 +48,9 @@ html {
 
 .iconButtonContainer {
 	align-self: stretch;
-	padding: 10px 50px 10px 50px;
-	justify-content: space-between;
+	justify-content: space-evenly;
 	align-items: flex-start;
-	display: inline-flex;
+	display: flex;
 	flex-wrap: wrap;
 }
 
@@ -118,6 +117,10 @@ html {
 
 .swiper-slide img:hover {
 		transform:scale(1.05);
+}
+
+.swiper-pagination-bullet-active {
+  background-color: #0F0F3F !important;
 }
 
 /* Modal */
